--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
                             </div>
 
                             <div class="fw-default-row">- Vulnerability Assessment and Penetration Testing</div>
-                            <div class="fw-default-row">- Network and System Auditing</div>
-                            <div class="fw-default-row">- Industry Ready Training (C++ | Python | SQL | Practical Ethical Hacking | Web-Application and API Penetration Testing |)</div>
+                            <div class="fw-default-row">- Network and System Testing</div>
+                            <div class="fw-default-row">- Industry Ready (IR) Training (Javascript | Python | Go | SQL |)</div>
                           </div>
                         </div>
      
@@ -490,7 +490,7 @@
                             </div>
                             
                             <div class="fw-default-row">- Offensive Security Testing and Auditing</div>
-                            <div class="fw-default-row">- Product Programming and Desigining(Freelance and On-Contract)</div>
+                            <div class="fw-default-row">- Product Programming and Desigining(Freelance and On-Contract Basis)</div>
                             <div class="fw-default-row">- Security Consultant for Social Media Influencers and Marketeer</div>
                           </div>
                         </div>
@@ -864,7 +864,7 @@
                           <figure class="item lbaudio" data-groups='["category_all", "category_detailed"]'>
                             <div class="portfolio-item-img">
                               <img src="img/portfolio/1.jpg" alt="Speaker" title="" />
-                              <a href="https://thecybergrabs.org/grabcon/" class="lightbox mfp-iframe" title="Presentation"></a>
+                              <a href="https://speakerdeck.com/chenzhen/thinking-like-a-bug-bounty-hunter" class="lightbox mfp-iframe" title="Presentation"></a>
                             </div>
 
                             <i class="fa fa-volume-up"></i>
@@ -875,7 +875,7 @@
                           <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                             <div class="portfolio-item-img">
                               <img src="img/portfolio/2.jpg" alt="Speaker" title="Presentation" />
-                              <a href="https://gravithon.feelthegravity.in/" class="lightbox mfp-iframe"></a>
+                              <a href="https://speakerdeck.com/chenzhen/talk-at-gravithon2021" class="lightbox mfp-iframe"></a>
                             </div>
 
                             <i class="far fa-file-alt"></i>
@@ -930,7 +930,7 @@
                           <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                             <div class="portfolio-item-img">
                               <img src="img/portfolio/4.jpg" alt="Speaker" title="Presentation" />
-                              <a href="https://bsidesnoida.in/" class="lightbox mfp-iframe"></a>
+                              <a href="https://speakerdeck.com/chenzhen/the-future-of-bug-bounty-hunting-at-bsides-noida" class="lightbox mfp-iframe"></a>
                             </div>
 
                             <i class="far fa-file-alt"></i>
