--- a/index.html
+++ b/index.html
@@ -959,6 +959,17 @@
                             <h4 class="name">Speaker @GrimmCon 0x3</h4>
                             <span class="category">Slides</span>
                           </figure>
+                          
+                          <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
+                            <div class="portfolio-item-img">
+                              <img src="img/portfolio/7.jpg" alt="Speaker" title="Presentation" />
+                              <a href="" class="lightbox mfp-iframe"></a>
+                            </div>
+
+                            <i class="far fa-file-alt"></i>
+                            <h4 class="name">Speaker @DamnCon2021</h4>
+                            <span class="category">Slides</span>
+                          </figure>
                         </div>
                       </div>
                       <!-- End of Portfolio Content -->
