--- a/index.html
+++ b/index.html
@@ -962,8 +962,8 @@
                           
                           <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/portfolio/7.jpg" alt="Speaker" title="Presentation" />
-                              <a href="" class="lightbox mfp-iframe"></a>
+                              <img src="img/portfolio/9.jpg" alt="Speaker" title="Presentation" />
+                              <a href="https://speakerdeck.com/chenzhen/dealing-with-offensive-security-in-organization" class="lightbox mfp-iframe"></a>
                             </div>
 
                             <i class="far fa-file-alt"></i>
