--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <ul>
                           <li>
                             <span class="title">Qualification</span>
-                            <span class="value">CEH, ICSI Network Specialist, TCM-PEH, NCSA</span>
+                            <span class="value">NCSA, TCM-PEH, ICSI Network Specialist</span>
                           </li>
 
                           <li>
