--- a/index.html
+++ b/index.html
@@ -596,25 +596,25 @@
                       <div class="timeline timeline-second-style clearfix">
                         <div class="timeline-item clearfix">
                           <div class="left-part">
-                            <h5 class="item-period">Nov 2020 - Mar 2020</h5>
+                            <h5 class="item-period">Jan 2022 - Present</h5>
                             <span class="item-company">Pikk</span>
                           </div>
                           <div class="divider"></div>
                           <div class="right-part">
-                            <h4 class="item-title">Intern</h4>
-                            <p>Completed a great project with Pikk, a startup, where i contributed in the field of securing website, partial android-app security testing and research work on advance cybersecurity.</p>
+                            <h4 class="item-title">Cyber Security Engineer</h4>
+                            <p>Joined Honeywell as a Cyber Security Engineer.</p>
                           </div>
                         </div>
 
                         <div class="timeline-item clearfix">
                           <div class="left-part">
-                            <h5 class="item-period">May 2020 - June 2020, June 2021 - July 2021</h5>
-                            <span class="item-company">GPCSSI, , MP Polce Department</span>
+                            <h5 class="item-period">May 2020 - June 2020, June 2021 - July 2021, Nov 2020 - Mar 2020</h5>
+                            <span class="item-company">GPCSSI, , MP Polce Department, Pikk</span>
                           </div>
                           <div class="divider"></div>
                           <div class="right-part">
                             <h4 class="item-title">Cyber Investigator</h4>
-                            <p>I have helped to find as much information as possible about solving different cases using OSINT tools and techniques, that helped in Cyber-Crime Investigations and further any kind of investigations by police authorities.</p>
+                            <p>I have helped to find as much information as possible about solving different cases using OSINT tools and techniques, that helped in Cyber-Crime Investigations and further any kind of investigations by police authorities. At PIKKC, I worked over security testing areas of prime soft-product.</p>
                           </div>
                         </div>
                         
@@ -625,7 +625,7 @@
                           </div>
                           <div class="divider"></div>
                           <div class="right-part">
-                            <h4 class="item-title">C++, Python, Javascript</h4>
+                            <h4 class="item-title">Python, Java, GO, Javascript</h4>
                             <p>I programm projects and create tools that are fun, easy to use.</p>
                           </div>
                         </div>
