--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <header id="site_header" class="header mobile-menu-hide">
             <div class="header-content">
               <div class="header-photo">
-                <img src="img/main_pic.jpeg" alt="Fardeen Ahmed">
+                <img src="img/main_pic.png" alt="Fardeen Ahmed">
               </div>
               <div class="header-titles">
                 <h2>Fardeen Ahmed</h2>
