--- a/index.html
+++ b/index.html
@@ -431,6 +431,11 @@
                                 <img src="img/clients/client-15.png" alt="Logo">
                           </a>
                         </div>
+                         <div class="client-block">
+                              <a href="/" target="_blank" title="Logo">
+                                <img src="img/clients/client-16.png" alt="Logo">
+                          </a>
+                        </div>
                         </div>
                     </div>
                   </div>
