--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <a href="https://dsph.org/" target="_blank" class="btn btn-primary">Get Certified</a>
             </div>
 
-            <div class="copyrights">© 2021 All rights reserved.</div>
+            <div class="copyrights">© 2022 All rights reserved.</div>
           </header>
 
           <!-- Mobile Navigation -->
@@ -161,7 +161,7 @@
                   <!-- Personal Information -->
                   <div class="row">
                     <div class="col-xs-12 col-sm-7">
-                      <p>I am Fardeen Ahmed. A Cybersecurity Researcher, Programmer as well as a student. Currently i am pursuing B.Tech in Computer Science, with Specialization in CyberSecurity and Digital Forensics. I have a background of cybresecurity from quite a young age. I contributed in securing websites, web-applications, APIs and Android Applications. Also I contributed in securing some governement organization around the world. In my free time I code in, create mini projects and tools, and also help people over different platforms. I also do train people in fields of Security testing and Programming.<br><br> If you need any help, mail me directly. Thank you for the visit here!!!</p>
+                      <p>I am Fardeen Ahmed. A Security Researcher, Programmer as well as a life-long learner. Currently i am pursuing B.Tech in Computer Science, with Specialization in CyberSecurity and Digital Forensics. I have a background of cybresecurity from quite a young age. I contribute in securing Websites, Web-applications, APIs and Android Applications. Also I contribute in securing some governement organization around the world. In my free time I code, create mini projects and tools, and also help people over different platforms. I also do train people in fields of Security testing and Programming.<br><br> If you need any help, mail me directly. Thank you for the visit here!!!</p>
                     </div>
 
                     <div class="col-xs-12 col-sm-5">
@@ -179,12 +179,12 @@
 
                           <li>
                             <span class="title">Expertise</span>
-                            <span class="value">Offensive Security, Digital Forensics and Soft-product programming</span>
+                            <span class="value">Product Security / Penetration Testing and Soft-product programming</span>
                           </li>
 
                           <li>
                             <span class="title">Interested Fields</span>
-                            <span class="value">Security Research, Pentest (Websites & Web-Applications, Android Application, APIs, Internal and External Network, Cloud, IOT, OT, social engineering), Soft product and Open-Source Programming, Digital Forensics, IT Security Practice and Adversary Simulation</span>
+                            <span class="value">Security Research, Pentest (Websites & Web-Applications, Android Application, APIs, Thick-Client, Internal and External Network, social engineering), Soft product and Open-Source Programming</span>
                           </li>
                         </ul>
                       </div>
@@ -213,7 +213,7 @@
                             </div>
                             <div class="ci-text">
                               <h4>Offensive Penetration Testing Service</h4>
-                              <p>Offensive Penetration testing services includes Websites & Web-Applications, Android Application, APIs, Internal and External Network, Cloud, IOT, OT and Soft-Product Security Testing.</p>
+                              <p>Offensive Penetration testing services includes Websites & Web-Applications, Android Application, APIs, Internal and External Network and Soft-Product Security Testing.</p>
                             </div>
                           </div>
                           <div class="info-block-w-icon">
@@ -221,7 +221,7 @@
                               <i class="lnr lnr-laptop-phone"></i>
                             </div><div class="ci-text">
                               <h4>Product Programming</h4>
-                              <p>I code in my free time. i create tools that can be used by other cybersecurity enthusiasts. I code in Python, and contribute in Open-Source programming, solving issues, creating add-ons and creating tools are fun to do</p>
+                              <p>I code in my free time. i create tools that can be used by other cybersecurity enthusiasts. I code in Python, and contribute in Open-Source programming, and solving issues. Creating add-ons and creating tools are fun to do</p>
                             </div>
                           </div>
                         </div>
@@ -244,7 +244,7 @@
                             <div class="ci-icon">
                               <i class="lnr lnr-flag"></i>
                             </div><div class="ci-text">
-                              <h4>Ethical Hacker</h4>
+                              <h4>Ethical Hacker / Bug-Bounty Hunter</h4>
                               <p>I find flaws in softwares on different RDP/VDP platforms in free time, both as a skill and hobby, Most of my findings comprise of Logical, Critical and sometimes, finding in bulk for low-hanging flaws. I ain't a complete geek, i do go outside and play soccer when we friends are together.</p>
                             </div>
                           </div>
@@ -493,7 +493,7 @@
                               <a href="https://www.upwork.com/freelancers/~01e141fab0be7977be" target="_self" class="btn btn-primary">Hire Me</a>
                             </div>
                             
-                            <div class="fw-default-row">- Offensive Security Testing and Auditing</div>
+                            <div class="fw-default-row">- Offensive Security Penetration Testing</div>
                             <div class="fw-default-row">- Product Programming and Desigining(Freelance and On-Contract Basis)</div>
                             <div class="fw-default-row">- Security Consultant for Social Media Influencers and Marketeer</div>
                           </div>
