--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                             </div>
                             
                             <div class="fw-button-row">
-                              <a href="https://www.upwork.com/freelancers/~01e141fab0be7977be" target="_self" class="btn btn-secondary">Hire Me</a>
+                              <a href="mailto:iamhereforyourqueries@gmail.com" target="_self" class="btn btn-secondary">Hire My Services</a>
                             </div>
 
                             <div class="fw-default-row">- Vulnerability Assessment and Penetration Testing</div>
@@ -490,7 +490,7 @@
                             </div>
 
                             <div class="fw-button-row">
-                              <a href="https://www.upwork.com/freelancers/~01e141fab0be7977be" target="_self" class="btn btn-primary">Hire Me</a>
+                              <a href="mailto:iamhereforyourqueries@gmail.com" target="_self" class="btn btn-primary">Hire My Services</a>
                             </div>
                             
                             <div class="fw-default-row">- Offensive Security Penetration Testing</div>
