--- a/index.html
+++ b/index.html
@@ -174,17 +174,17 @@
 
                           <li>
                             <span class="title">Workplace</span>
-                            <span class="value"><a href="https://pikkc.com/">Pikkc</a>, <a href="https://www.honeywell.com/us/en">Honeywell</a></span>
+                            <span class="value"><a href="https://pikkc.com/">Pikkc</a>, <a href="https://www.honeywell.com/us/en">Honeywell</a>,  <a href="https://www.bankofamerica.com/">Bank Of America</a></span>
                           </li>
 
                           <li>
                             <span class="title">Expertise</span>
-                            <span class="value">Product Security / Penetration Testing and Soft-product programming</span>
+                            <span class="value">Product Security, Cyber Security, DevSecOps, Software Development</span>
                           </li>
 
                           <li>
                             <span class="title">Interested Fields</span>
-                            <span class="value">Security Research, Pentest (Websites & Web-Applications, Android Application, APIs, Thick-Client, Internal and External Network, social engineering), Soft product and Open-Source Programming</span>
+                            <span class="value">Security Research, Pentest (Websites & Web-Applications, Android Application, APIs, Thick-Client, Internal and External Network, social engineering), Open-Source and Product Programming</span>
                           </li>
                         </ul>
                       </div>
