--- a/index.html
+++ b/index.html
@@ -1136,7 +1136,7 @@
                     <div class="col-xs-12 col-sm-8">
                       <div id="map" class="map">
                           <div class="lmpixels-map">
-                            	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.9329340062836!2d88.3696750499597!3d22.804948830077045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f891500fea9e0f%3A0xbb1d61009d8b80!2sDamn%20Secure%20Pentesting%20Hub%20(DSPH)!5e0!3m2!1sen!2sin!4v1629973001932!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.0898969306813!2d72.88182571522462!3d19.103711787072122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c86dd30cd3dd%3A0x38e9f93b686a6f89!2sBank%20of%20America%20Continuum%20India!5e0!3m2!1sen!2sin!4v1659027141200!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                             </div>
                       </div>
                       <div class="block-title">
