--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                   <!-- Personal Information -->
                   <div class="row">
                     <div class="col-xs-12 col-sm-7">
-                      <p>I am Fardeen Ahmed. A Security Researcher, Programmer as well as a life-long learner. Currently i am pursuing B.Tech in Computer Science, with Specialization in CyberSecurity and Digital Forensics. I have a background of cybresecurity from quite a young age. I contribute in securing Websites, Web-applications, APIs and Android Applications. Also I contribute in securing some governement organization around the world. In my free time I code, create mini projects and tools, and also help people over different platforms. I also do train people in fields of Security testing and Programming.<br><br> If you need any help, mail me directly. Thank you for the visit here!!!</p>
+                      <p>I am Fardeen Ahmed. A Security Researcher, Programmer as well as a life-long learner. Currently i am pursuing B.Tech in Computer Science, with Specialization in CyberSecurity and Digital Forensics. I have a background of cybersecurity from quite a young age. I contribute in securing Websites, Web-applications, APIs setups and Android Applications. Also I contribute in securing some governement organization around the world. In my free time I code, create mini projects and tools, and help people over different platforms. I train people in fields of Cybersecurity, Penetration testing and Programming.<br><br> If need any help, mail me directly. Thank you for the visit here!!!</p>
                     </div>
 
                     <div class="col-xs-12 col-sm-5">
@@ -213,7 +213,7 @@
                             </div>
                             <div class="ci-text">
                               <h4>Offensive Penetration Testing Service</h4>
-                              <p>Offensive Penetration testing services includes Websites & Web-Applications, Android Application, APIs, Internal and External Network and Soft-Product Security Testing.</p>
+                              <p>Offensive Penetration testing services includes Websites & Web-Applications, Android Application, APIs, Thick Client, Cloud, Internal and External Network and Soft-Product Security Testing.</p>
                             </div>
                           </div>
                           <div class="info-block-w-icon">
@@ -236,8 +236,8 @@
                               <i class="lnr lnr-pencil"></i>
                             </div>
                             <div class="ci-text">
-                              <h4>Article Writer and Blogger</h4>
-                              <p>I do write articles on Cybersecurity, Pentesting, Operating Systems etc. In short, everything on computer. Anything that amazes me, I write, not only as an experience, but for those who might encounter same situation or problem.</p>
+                              <h4>Blogger + D.C</h4>
+                              <p>I do write articles on Cybersecurity, Pentesting, Operating Systems etc. In short, everything on computer. Anything that amazes me, I write, not only as an experience, but for those who might encounter same situation or problems.</p><br>I create digital content too, in order to let poeple connect and colaborate different ideas and tech knowledge. Plus, Memes are always fun if they are relatable.
                             </div>
                           </div>
                           <div class="info-block-w-icon">
