--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
                           <li>
                             <span class="title">Workplace</span>
-                            <span class="value"><a href="https://pikkc.com/">Pikkc</a>, <a href="https://www.honeywell.com/us/en">Honeywell</a>,  <a href="https://www.bankofamerica.com/">Bank Of America</a></span>
+                            <span class="value"><a href="https://pikkc.com/">Pikkc</a>, <a href="https://www.honeywell.com/us/en">Honeywell</a>
                           </li>
 
                           <li>
