--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             </div>
                             <div class="ci-text">
                               <h4>Blogger + D.C</h4>
-                              <p>I do write articles on Cybersecurity, Pentesting, Operating Systems etc. In short, everything on computer. Anything that amazes me, I write, not only as an experience, but for those who might encounter same situation or problems.</p><br>I create digital content too, in order to let poeple connect and colaborate different ideas and tech knowledge. Plus, Memes are always fun if they are relatable.
+                              <p>I do write articles on Cybersecurity, Pentesting, Operating Systems etc. In short, everything on computer. Anything that amazes me, I write, not only as an experience, but for those who might encounter same situation or problems. I create digital content too, in order to let poeple connect and colaborate different ideas and tech knowledge. Plus, Memes are always fun if they are relatable.
                             </div>
                           </div>
                           <div class="info-block-w-icon">
