--- a/index.html
+++ b/index.html
@@ -96,14 +96,13 @@
             <div class="social-links">
               <ul>
                 <li><a href="https://www.instagram.com/infosecresearcher/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://twitter.com/chen__zhen" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.quora.com/profile/Fardeen-Ahmed-71" target="_blank"><i class="fab fa-quora"></i></a></li>
-                <li><a href="https://fardeen-ahmed.medium.com/" target="_blank"><i class="fab fa-medium"></i></a></li>
+                <li><a href="https://twitter.com/infoscresearchr" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://infosecresearcher.medium.com" target="_blank"><i class="fab fa-medium"></i></a></li>
               </ul>
             </div>
 
             <div class="header-buttons">
-              <a href="https://dsph.org/" target="_blank" class="btn btn-primary">Get Certified</a>
+              <a href="#" target="_blank" class="btn btn-primary">Get Certified</a>
             </div>
 
             <div class="copyrights">© 2022 All rights reserved.</div>
