--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -86,11 +86,9 @@
 
             <div class="social-links">
               <ul>
-                <li><a href="https://www.linkedin.com/in/fardeen-ahmed-455997188/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="https://twitter.com/fardeenahmed411" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.quora.com/profile/Fardeen-Ahmed-71" target="_blank"><i class="fab fa-quora"></i></a></li>
-                <li><a href="https://www.instagram.com/ahmedfardeen_/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://fardeen-ahmed.medium.com/" target="_blank"><i class="fab fa-medium"></i></a></li>
+                <li><a href="https://www.instagram.com/infosecresearcher/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://twitter.com/infoscresearchr" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://infosecresearcher.medium.com" target="_blank"><i class="fab fa-medium"></i></a></li>
               </ul>
             </div>
 
