--- a/index.html
+++ b/index.html
@@ -943,6 +943,17 @@
 
                           <figure class="item lbimage" data-groups='["category_all", "category_mockups"]'>
                             <div class="portfolio-item-img">
+                              <img src="img/portfolio/10.png" alt="Mockup Design 1" title="Project" />
+                              <a class="lightbox" title="Mockup Design 1" class="lightbox mfp-iframe" href="img/portfolio/full/10.png"></a>
+                            </div>
+
+                            <i class="far fa-file-alt"></i>
+                            <h4 class="name">Speaker @BSides Jaipur</h4>
+                            <span class="category">Slides</span>
+                          </figure>
+
+                          <figure class="item lbimage" data-groups='["category_all", "category_mockups"]'>
+                            <div class="portfolio-item-img">
                               <img src="img/portfolio/5.jpg" alt="Mockup Design 1" title="Project" />
                               <a class="lightbox" title="Mockup Design 1" class="lightbox mfp-iframe" href="img/portfolio/full/5.jpg"></a>
                             </div>
