--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
 
                           <figure class="item lbimage" data-groups='["category_all", "category_mockups"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/portfolio/10.png" alt="Mockup Design 1" title="Project" />
+                              <img src="img/portfolio/10.png" alt="Speaker" title="Presentation" />  
                               <a class="lightbox" title="Mockup Design 1" class="lightbox mfp-iframe" href="img/portfolio/full/10.png"></a>
                             </div>
 
@@ -954,7 +954,7 @@
 
                           <figure class="item lbimage" data-groups='["category_all", "category_mockups"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/portfolio/5.jpg" alt="Speaker" title="Presentation" />
+                              <img src="img/portfolio/5.jpg" alt="Mockup Design 1" title="Project" />
                               <a class="lightbox" title="Mockup Design 1" class="lightbox mfp-iframe" href="img/portfolio/full/5.jpg"></a>
                             </div>
 
