--- a/index.html
+++ b/index.html
@@ -941,10 +941,10 @@
                             <span class="category">Slides</span>
                           </figure>
 
-                          <figure class="item lbimage" data-groups='["category_all", "category_mockups"]'>
+                          <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                             <div class="portfolio-item-img">
-                              <img src="img/portfolio/10.png" alt="Speaker" title="Presentation" />  
-                              <a class="lightbox" title="Mockup Design 1" class="lightbox mfp-iframe" href="img/portfolio/full/10.png"></a>
+                              <img src="img/portfolio/10.png" alt="Speaker" title="Presentation" />
+                              <a href="#" class="lightbox mfp-iframe"></a>
                             </div>
 
                             <i class="far fa-file-alt"></i>
