--- a/index.html
+++ b/index.html
@@ -952,6 +952,17 @@
                             <span class="category">Slides</span>
                           </figure>
 
+                          <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
+                            <div class="portfolio-item-img">
+                              <img src="img/portfolio/11.png" alt="Speaker" title="Presentation" />
+                              <a href="#" class="lightbox mfp-iframe"></a>
+                            </div>
+
+                            <i class="far fa-file-alt"></i>
+                            <h4 class="name">Speaker @OWASP VIT Bhopal Club</h4>
+                            <span class="category">Slides</span>
+                          </figure>
+
                           <figure class="item lbimage" data-groups='["category_all", "category_mockups"]'>
                             <div class="portfolio-item-img">
                               <img src="img/portfolio/5.jpg" alt="Mockup Design 1" title="Project" />
