--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -158,7 +158,7 @@
                         </a>
                       </span>
                       <span class="author vcard">
-                        <a class="url fn n" href="https://www.instagram.com/ahmedfardeen_/" rel="author"> <i class="fas fa-user"></i> Fardeen Ahmed</a>
+                        <a class="url fn n" href="https://www.instagram.com/infosecresearcher" rel="author"> <i class="fas fa-user"></i> Fardeen Ahmed</a>
                       </span>
                     </div>
       
