--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -93,7 +93,7 @@
             </div>
 
             <div class="header-buttons">
-              <a href="https://darksocietypenetration.com/courses/" target="_blank" class="btn btn-primary">Get Certified</a>
+              <a href="#" target="_blank" class="btn btn-primary">Get Certified</a>
             </div>
             <div class="copyrights">© 2020 All rights reserved.</div>
           </header>
@@ -216,5 +216,4 @@
     <script src="js/main.js"></script>
   </body>
 
-<!-- Mirrored from lmpixels.com/demo/breezycv/dark/2/blog-post-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 15 Aug 2020 05:41:41 GMT -->
 </html>
