--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 <li><a href="https://www.instagram.com/infosecresearcher/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="https://twitter.com/infoscresearchr" target="_blank"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="https://infosecresearcher.medium.com" target="_blank"><i class="fab fa-medium"></i></a></li>
+                <li><a href="https://youtube.com/@infosecresearchar" target="_blank"><i class="fab fa-youtube"></i></a></li>
               </ul>
             </div>
 
