--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,7 @@
                     <div class="col-xs-12 col-sm-8">
                       <div id="map" class="map">
                           <div class="lmpixels-map">
-                            	<iframe src="#" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            	<iframe src="#" width="#" height="#" style="border:0;" allowfullscreen="#" loading="lazy"></iframe>
                             </div>
                       </div>
                       <div class="block-title">
