--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@
                     <!-- Contact Form -->
                     <div class="col-xs-12 col-sm-8">
                       </div>
-                      <div class="block-title">
+                      <div class="block-title"><br><br>
                         <h3>How Can I <span>Help You?</span></h3>
                       </div>
 
