--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                         <i class="lnr lnr-heart"></i>
                         <h4>Appreciation</h4>
                         <span class="fun-fact-block-value">32</span>
-                        <a href="#"><span class="fun-fact-block-text"></span>
+                        <a href="/"><span class="fun-fact-block-text"></span>
                       </div>
                     </div>
 
@@ -531,7 +531,7 @@
                         <i class="lnr lnr-clock"></i>
                         <h4>Fun Hours</h4>
                         <span class="fun-fact-block-value">1000+</span>
-                        <a href="#"><span class="fun-fact-block-text"></span>
+                        <a href="/"><span class="fun-fact-block-text"></span>
                       </div>
                     </div>
 
@@ -539,7 +539,7 @@
                       <div class="fun-fact gray-default">
                         <i class="lnr lnr-star"></i>
                         <h4>Cyber talks</h4>
-                        <a href="#" target="_blank" title="Logo"> 
+                        <a href="/" target="_blank" title="Logo"> 
                           <span class="fun-fact-block-value">8</span>
                       </div>
                     </div>
